zen-page zen-module

--- a/src/zen/confirm/index.html
+++ b/src/zen/confirm/index.html
@@ -1,4 +1,4 @@
-<div class="light-zen show">
+<div class="zen-module show">
     <div class="c-confirm" style="display: none">
         <div class="mask"></div>
         <div class="mbody">
