--- a/src/zen/multi-select/index.html
+++ b/src/zen/multi-select/index.html
@@ -1,4 +1,4 @@
-<div class="light-zen">
+<div class="zen-module">
     <div class="c-multi-select">
         <div class="select-area">请选择</div>
         <div class="select-list">
