--- a/src/zen/toggle-group/index.html
+++ b/src/zen/toggle-group/index.html
@@ -1,4 +1,4 @@
-<div class="light-zen">
+<div class="zen-module">
     <div class="c-toggle-group">
         <div class="group-area" data-type="selected">
             <span class="group-name">已选中</span>
