--- a/src/zen/alert/index.html
+++ b/src/zen/alert/index.html
@@ -1,4 +1,4 @@
-<div class="light-zen show">
+<div class="zen-module show">
     <div class="c-alert" style="display: none">
         <div class="mask"></div>
         <div class="mbody">
