--- a/src/zen/toast/index.html
+++ b/src/zen/toast/index.html
@@ -1,4 +1,4 @@
-<div class="light-zen show">
+<div class="zen-module show">
     <div class="c-toast" style="display: none">
         <div class="mbody">
             <div class="message-text">温馨提示！！！！</div>
