--- a/src/zen-module/side-nav/index.html
+++ b/src/zen-module/side-nav/index.html
@@ -1,5 +1,5 @@
 <div class="zen-module show">
-    <div class="c-side-nav">
+    <div class="c-side-nav" style="display:none;">
         <div class="nav-area">
             <div class="lh40 text-center white mb15" v-link="https://github.com/ganlight">
                 <div><img src="assets/img/ganlight.jpeg" alt="" class="avatar"></div>
