--- a/src/zen-module/side-nav/index.html
+++ b/src/zen-module/side-nav/index.html
@@ -6,10 +6,9 @@
                 <div>ganlight</div>
             </div>
             <ul class="c-ul ">
-                <li class="clearfix"><a href="#about"><i class="fa fa-star"></i><span>ZENJS</span></a></li>
-                <li class="clearfix"><a href="#example/index"><i class="fa fa-coffee"></i><span>MODULE</span></a></li>
-                <li class="clearfix"><a href="https://ganlight.github.io/zenjs"><i class="fa fa-code"></i><span>EXAMPLE</span></a></li>
-                <li class="clearfix"><a href="https://github.com/ganlight/zenjs"><i class="fa fa-github"></i><span>GITHUB</span></a></li>
+                <li class="clearfix"><a href="#example/index"><i class="fa fa-tree"></i><span>MODULE</span></a></li>
+                <li class="clearfix"><a href="https://github.com/ganlight/zenjs"><i class="fa fa-code"></i><span>GITHUB</span></a></li>
+                <li class="clearfix"><a href="#about"><i class="fa fa-inbox"></i><span>ABOUT</span></a></li>
             </ul>
         </div>
     </div>
