--- a/src/zen-module/side-nav/index.html
+++ b/src/zen-module/side-nav/index.html
@@ -1,5 +1,5 @@
 <div class="zen-module show">
-    <div class="c-side-nav" style="display:none;">
+    <div class="c-side-nav nav-right" style="display:none;">
         <div class="nav-area">
             <div class="lh40 text-center white mb15" v-link="https://github.com/ganlight">
                 <div><img src="assets/img/ganlight.jpeg" alt="" class="avatar"></div>
@@ -10,6 +10,19 @@
                 <li class="clearfix"><a href="https://github.com/ganlight/zenjs"><i class="fa fa-code"></i><span>GITHUB</span></a></li>
                 <li class="clearfix"><a href="#about"><i class="fa fa-inbox"></i><span>ABOUT</span></a></li>
             </ul>
+        </div>
+    </div>
+    <div class="c-side-nav nav-top" style="display:none;">
+        <div class="nav-area text-center white">
+            <div class="lh40  mb15 font24 mt15" v-link="https://github.com/ganlight">
+                Welcome to Zenjs! <br>
+            </div>
+            <div class="font16 white lh25">
+              github:https://github.com/ganlight/zenjs
+            </div>
+            <div class="font16 white lh25">
+              email:ganlight@foxmail.com
+            </div>
         </div>
     </div>
 </div>
