--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/ico" href="favicon.ico">
     <title>Zenjs js</title>
     <!-- <link type="text/css" rel="stylesheet" href="./lib/css/font-awesome.min.css"> -->
-    <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script type="text/javascript" src="./lib/zenjs-zepto.min.js"></script>
     <script type="text/javascript" src="common.js"></script>
 </head>
