--- a/src/zen-module/side-nav/index.html
+++ b/src/zen-module/side-nav/index.html
@@ -21,6 +21,7 @@
             <ul class="c-ul ">
                 <li class="clearfix"><a href="#example/index"><i class="fa fa-tree"></i><span>MODULE</span></a></li>
                 <li class="clearfix"><a href="#blog/catalog"><i class="fa fa-bookmark"></i><span>BLOG</span></a></li>
+                <li class="clearfix"><a href="#todo"><i class="fa fa-th-list"></i><span>TODOMVC</span></a></li>
                 <li class="clearfix"><a href="https://github.com/ganlight/zenjs"><i class="fa fa-code"></i><span>GITHUB</span></a></li>
                 <li class="clearfix"><a href="#about"><i class="fa fa-inbox"></i><span>ABOUT</span></a></li>
             </ul>
