--- a/src/zen-module/mask/index.html
+++ b/src/zen-module/mask/index.html
@@ -6,7 +6,7 @@
         width: 100%;
         height: 100%;
         background: rgba(13, 14, 13, 0.29);
-        z-index: 100;
+        z-index: 50;
         display: none;
     }
 
@@ -30,10 +30,13 @@
             $(".zen-container").removeClass("mask-on");
         },
         bind: function() {
-            $(".c-mask").click(function() {
+            $(".c-mask").click(function(e) {
+                e.preventDefault();
                 Mask.close();
             });
         }
     }
-    Mask.init();
+    $(function() {
+        Mask.init();
+    })
 </script>
