--- a/src/zen-module/side-nav/index.html
+++ b/src/zen-module/side-nav/index.html
@@ -22,6 +22,7 @@
                 <li class="clearfix" v-link="#example/index"><a ><i class="fa fa-tree"></i><span>MODULE</span></a></li>
                 <li class="clearfix" v-link="#blog/catalog"><a ><i class="fa fa-bookmark"></i><span>BLOG</span></a></li>
                 <li class="clearfix" v-link="#todo"><a ><i class="fa fa-th-list"></i><span>TODOMVC</span></a></li>
+                <li class="clearfix" v-link="#gradients"><a ><i class="fa fa-ravelry"></i><span>GRADIENTS</span></a></li>
                 <li class="clearfix" v-link="https://github.com/ganlight/zenjs"><a ><i class="fa fa-code"></i><span>GITHUB</span></a></li>
                 <li class="clearfix" v-link="#about"><a ><i class="fa fa-inbox"></i><span>ABOUT</span></a></li>
             </ul>
